Remove old import and fix table for dark mode

--- a/src/sass/themes/_dark.scss
+++ b/src/sass/themes/_dark.scss
@@ -82,6 +82,7 @@ $mark-bg:                       #420b2a !default;
 
 $table-color:         $body-color !default;
 $table-accent-bg:     $gray-800 !default;
+$table-striped-bg:    $gray-900 !default;
 $table-hover-color:   $table-color !default;
 $table-hover-bg:      $gray-700 !default;
 $table-border-color:  $border-color !default;
